// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders appropriately with Show Private button (not syncing) 1`] = `
<div
  className="repo-tools"
>
  <RepoToolsPrivate />
  <RepoToolsRefresh
    isSyncing={false}
    onRefreshClicked={[Function]}
  />
  <RepoToolsSearch
    onSearchInput={[Function]}
  />
</div>
`;

exports[`renders appropriately without Show Private button (not syncing) 1`] = `
<div
  className="repo-tools"
>
  <RepoToolsRefresh
    isSyncing={false}
    onRefreshClicked={[Function]}
  />
  <RepoToolsSearch
    onSearchInput={[Function]}
  />
</div>
`;
